--- a/projects.html
+++ b/projects.html
@@ -141,10 +141,10 @@
   <main class="wrap">
     <section class="grid">
 
-      <!-- Team Alpha — Infrastructure Project (updated photo) -->
+      <!-- Team Alpha — Infrastructure Project (proper photo) -->
       <article class="card">
         <img class="thumb" alt="Data center racks and network infrastructure"
-             src="https://source.unsplash.com/1200x800/?data-center,network,servers" />
+             src="https://source.unsplash.com/1600x900/?server-rack,datacenter,cabling" />
         <div class="body">
           <h3 class="title">Team Alpha — Infrastructure Project</h3>
           <p class="desc">
@@ -159,10 +159,10 @@
         </div>
       </article>
 
-      <!-- CareGroup/BILH Network Administration (updated photo) -->
+      <!-- CareGroup/BILH Network Administration (proper photo) -->
       <article class="card">
         <img class="thumb" alt="Hospital technology network concept"
-             src="https://source.unsplash.com/1200x800/?hospital,healthcare,technology" />
+             src="https://source.unsplash.com/1600x900/?hospital,network,healthcare-it,servers" />
         <div class="body">
           <h3 class="title">CareGroup / BILH — Network Administration</h3>
           <p class="desc">
@@ -177,10 +177,10 @@
         </div>
       </article>
 
-      <!-- Team Unity (updated photo) -->
+      <!-- Team Unity (proper photo) -->
       <article class="card">
-        <img class="thumb" alt="Unity game engine / development concept"
-             src="https://source.unsplash.com/1200x800/?unity3d,game-engine,game-development" />
+        <img class="thumb" alt="Unity game engine and 3D game development concept"
+             src="https://source.unsplash.com/1600x900/?unity,game-development,3d" />
         <div class="body">
           <h3 class="title">Team Unity — Together We Can Accomplish Great Things</h3>
           <p class="desc">
