--- a/skills.html
+++ b/skills.html
@@ -35,6 +35,7 @@
     .brand{
       background:none;border:0;padding:0;margin:0;cursor:pointer;flex-shrink:0;
       font-weight:900; color:var(--accent); letter-spacing:-.04em; font-size:clamp(22px,3.2vw,32px);
+      text-decoration:none;
     }
     .navlinks{display:flex; gap:22px; align-items:center; flex-wrap:wrap; flex:1;}
     .navlinks a{
