--- a/projects.html
+++ b/projects.html
@@ -144,7 +144,7 @@
       <!-- Team Alpha — Infrastructure Project (proper photo) -->
       <article class="card">
         <img class="thumb" alt="Data center racks and network infrastructure"
-             src="https://source.unsplash.com/1600x900/?server-rack,datacenter,cabling" />
+             src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?w=1600&h=900&fit=crop" />
         <div class="body">
           <h3 class="title">Team Alpha — Infrastructure Project</h3>
           <p class="desc">
@@ -162,7 +162,7 @@
       <!-- CareGroup/BILH Network Administration (proper photo) -->
       <article class="card">
         <img class="thumb" alt="Hospital technology network concept"
-             src="https://source.unsplash.com/1600x900/?hospital,network,healthcare-it,servers" />
+             src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?w=1600&h=900&fit=crop" />
         <div class="body">
           <h3 class="title">CareGroup / BILH — Network Administration</h3>
           <p class="desc">
@@ -180,7 +180,7 @@
       <!-- Team Unity (proper photo) -->
       <article class="card">
         <img class="thumb" alt="Unity game engine and 3D game development concept"
-             src="https://source.unsplash.com/1600x900/?unity,game-development,3d" />
+             src="https://images.unsplash.com/photo-1552820728-8b83bb6b773f?w=1600&h=900&fit=crop" />
         <div class="body">
           <h3 class="title">Team Unity — Together We Can Accomplish Great Things</h3>
           <p class="desc">
