--- a/skills.html
+++ b/skills.html
@@ -48,7 +48,12 @@
       text-underline-offset:4px;
     }
     .profile-avatar{
-      margin-left:auto; margin-right:-6px; width:40px; height:40px; border-radius:6px;
+      position:fixed;
+      top:8px;
+      right:calc(8px + 0.25in);
+      z-index:1100;
+      width:40px; height:40px;
+      border-radius:6px;
       background:linear-gradient(180deg,#0DB5FF,#0070F3);
       display:grid; place-items:center; cursor:pointer;
       transition:transform .2s ease; flex-shrink:0;
@@ -83,6 +88,9 @@
     .grid{
       display:grid; gap:18px;
       grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+      max-width:1200px;
+      margin:0 auto;
+      justify-items:center;
     }
     .tile{
       background:var(--tile); border:1px solid var(--tile-border);
@@ -90,6 +98,8 @@
       box-shadow:0 10px 24px var(--tile-shadow);
       display:flex; align-items:flex-start; gap:14px;
       transition:transform .18s ease, box-shadow .18s ease, border-color .18s ease;
+      width:100%;
+      max-width:350px;
     }
     .tile:hover{
       transform:translateY(-4px);
