--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,21 @@
     }
     .navlinks a:hover{ color:#bfbfbf; }
     .navlinks a[aria-current="page"]{ color:#fff; text-decoration:underline; text-underline-offset:6px; }
+    
+    /* Recruiter Avatar */
+    .recruiter-avatar{
+      margin-left:auto; width:44px; height:44px; border-radius:50%;
+      background:linear-gradient(135deg, #E50914 0%, #ff4757 100%);
+      display:grid; place-items:center; cursor:pointer;
+      transition:transform .2s ease, box-shadow .2s ease; flex-shrink:0;
+      box-shadow:0 4px 12px rgba(229,9,20,.3);
+      border:2px solid rgba(255,255,255,.15);
+    }
+    .recruiter-avatar:hover{ 
+      transform:scale(1.08); 
+      box-shadow:0 6px 20px rgba(229,9,20,.5);
+    }
+    .recruiter-avatar svg{ width:22px; height:22px; fill:#fff; }
 
     /* ---- Header ---- */
     .page-hero{
@@ -151,6 +166,11 @@
       <a href="projects.html" aria-current="page">Projects</a>
       <a id="hireLink" href="contact.html">Hire Me</a>
     </div>
+    <a class="recruiter-avatar" href="index.html#home" title="Back to Intro">
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+      </svg>
+    </a>
   </nav>
 
   <header class="page-hero">
