--- a/projects.html
+++ b/projects.html
@@ -45,20 +45,15 @@
     .navlinks a:hover{ color:#bfbfbf; }
     .navlinks a[aria-current="page"]{ color:#fff; text-decoration:underline; text-underline-offset:6px; }
     
-    /* Recruiter Avatar */
-    .recruiter-avatar{
-      margin-left:auto; width:44px; height:44px; border-radius:50%;
-      background:linear-gradient(135deg, #E50914 0%, #ff4757 100%);
+    /* Recruiter Avatar - Blue Suitcase */
+    .profile-avatar{
+      margin-left:auto; width:40px; height:40px; border-radius:6px;
+      background:linear-gradient(180deg,#0DB5FF,#0070F3);
       display:grid; place-items:center; cursor:pointer;
-      transition:transform .2s ease, box-shadow .2s ease; flex-shrink:0;
-      box-shadow:0 4px 12px rgba(229,9,20,.3);
-      border:2px solid rgba(255,255,255,.15);
+      transition:transform .2s ease; flex-shrink:0;
     }
-    .recruiter-avatar:hover{ 
-      transform:scale(1.08); 
-      box-shadow:0 6px 20px rgba(229,9,20,.5);
-    }
-    .recruiter-avatar svg{ width:22px; height:22px; fill:#fff; }
+    .profile-avatar:hover{ transform:scale(1.05); }
+    .profile-avatar svg{ width:20px; height:20px; fill:#fff; }
 
     /* ---- Header ---- */
     .page-hero{
@@ -166,10 +161,8 @@
       <a href="projects.html" aria-current="page">Projects</a>
       <a id="hireLink" href="contact.html">Hire Me</a>
     </div>
-    <a class="recruiter-avatar" href="index.html#home" title="Back to Intro">
-      <svg viewBox="0 0 24 24" aria-hidden="true">
-        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
-      </svg>
+    <a class="profile-avatar" href="index.html#home" title="Back to Intro">
+      <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M10 6V5a2 2 0 0 1 2-2h0a2 2 0 0 1 2 2v1h3a3 3 0 0 1 3 3v3h-7v1a1 1 0 0 1-2 0V12H2V9a3 3 0 0 1 3-3h5Zm2-1h0a1 1 0 0 0-1 1v1h2V6a1 1 0 0 0-1-1ZM2 13h9v1a1 1 0 0 0 2 0v-1h9v5a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-5Z"/></svg>
     </a>
   </nav>
 
