--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,21 @@
     .navlinks a:hover{ color:#bfbfbf; }
     .navlinks a[aria-current="page"]{ color:#fff; text-decoration:underline; text-underline-offset:6px; }
 
+    /* Recruiter Avatar */
+    .recruiter-avatar{
+      width:44px; height:44px; border-radius:50%;
+      border:2px solid var(--accent);
+      box-shadow:0 4px 12px rgba(229,9,20,.4);
+      cursor:pointer;
+      transition:transform .2s ease, box-shadow .2s ease;
+      flex-shrink:0;
+      margin-left:auto;
+    }
+    .recruiter-avatar:hover{
+      transform:scale(1.1);
+      box-shadow:0 6px 16px rgba(229,9,20,.6);
+    }
+
     /* ---- Header ---- */
     .page-hero{
       padding:28px clamp(16px,4vw,48px) 10px;
@@ -151,6 +166,12 @@
       <a href="projects.html" aria-current="page">Projects</a>
       <a id="hireLink" href="contact.html">Hire Me</a>
     </div>
+    <img 
+      src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=200&h=200&fit=crop&crop=faces" 
+      alt="Recruiter Profile"
+      class="recruiter-avatar"
+      title="Contact Recruiter"
+    />
   </nav>
 
   <header class="page-hero">
