--- a/contact.html
+++ b/contact.html
@@ -46,33 +46,19 @@
     }
 
     .navlinks{display:flex; gap:22px; align-items:center; flex-wrap:wrap; flex:1;}
+    /* Remove underlines from all tabs… */
     .navlinks a{
-      color:#e5e5e5; text-decoration:underline; font-size:14px; font-weight:600;
+      color:#e5e5e5; text-decoration:none; font-size:14px; font-weight:600;
       cursor:pointer;
     }
     .navlinks a:hover{color:var(--ink-2)}
-    
-    .profile-avatar{
-      position:fixed;
-      top:14px;
-      right:clamp(16px,4vw,48px);
-      width:40px; height:40px;
-      border-radius:6px;
-      background:linear-gradient(180deg,#0DB5FF,#0070F3);
-      display:grid;
-      place-items:center;
-      cursor:pointer;
-      transition:transform .2s ease;
-      flex-shrink:0;
-      z-index:1100;
+    /* …except keep underline for “Hire Me” */
+    .navlinks a.current{
+      text-decoration:underline;
+      text-underline-offset:3px;
     }
-    .profile-avatar:hover{
-      transform:scale(1.05);
-    }
-    .profile-avatar svg{
-      width:20px; height:20px;
-      fill:#fff;
-    }
+
+    /* (Removed profile-avatar styles and element per request) */
 
     /* --- Main Content --- */
     .main-content{
@@ -302,13 +288,10 @@
       <a href="#portfolio" class="nav-link">Portfolio</a>
       <a href="#skills" class="nav-link">Skills</a>
       <a href="#projects" class="nav-link">Projects</a>
-      <a href="contact.html">Hire Me</a>
+      <!-- Keep underline ONLY on this tab -->
+      <a href="contact.html" class="current">Hire Me</a>
     </div>
-    <a href="index.html" class="profile-avatar" aria-label="Back to main" title="Recruiter">
-      <svg viewBox="0 0 24 24">
-        <path d="M10 6V5a2 2 0 0 1 2-2h0a2 2 0 0 1 2 2v1h3a3 3 0 0 1 3 3v3h-7v1a1 1 0 0 1-2 0V12H2V9a3 3 0 0 1 3-3h5Zm2-1h0a1 1 0 0 0-1 1v1h2V6a1 1 0 0 0-1-1ZM2 13h9v1a1 1 0 0 0 2 0v-1h9v5a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-5Z"/>
-      </svg>
-    </a>
+    <!-- Removed profile-avatar (top-right element) -->
   </nav>
 
   <!-- Main Content -->
@@ -390,7 +373,7 @@
     document.querySelectorAll('.nav-link').forEach(link => {
       link.addEventListener('click', e => {
         const href = e.target.getAttribute('href');
-        if (href.startsWith('#')) {
+        if (href && href.startsWith('#')) {
           e.preventDefault();
           const target = document.querySelector(href);
           if (target) target.scrollIntoView({ behavior: 'smooth' });
