--- a/skills.html
+++ b/skills.html
@@ -48,21 +48,6 @@
       text-underline-offset:4px;
     }
 
-    /* Recruiter Avatar */
-    .recruiter-avatar{
-      width:44px; height:44px; border-radius:50%;
-      border:2px solid var(--accent);
-      box-shadow:0 4px 12px rgba(229,9,20,.4);
-      cursor:pointer;
-      transition:transform .2s ease, box-shadow .2s ease;
-      flex-shrink:0;
-      margin-left:auto;
-    }
-    .recruiter-avatar:hover{
-      transform:scale(1.1);
-      box-shadow:0 6px 16px rgba(229,9,20,.6);
-    }
-
     .page-hero{
       padding:28px clamp(16px,4vw,48px) 10px;
       border-bottom:1px solid rgba(255,255,255,.06);
@@ -143,12 +128,7 @@
       <a href="projects.html">Projects</a>
       <a id="hireLink" href="contact.html">Hire Me</a>
     </div>
-    <img 
-      src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=200&h=200&fit=crop&crop=faces" 
-      alt="Recruiter Profile"
-      class="recruiter-avatar"
-      title="Contact Recruiter"
-    />
+    <!-- Top-right element removed -->
   </nav>
 
   <header class="page-hero">
