--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       <button class="brand nf" id="brandHome" aria-label="Reset to intro">Angel Contreras</button>
       <div class="navlinks" role="navigation" aria-label="Primary">
         <a href="#home" id="navHome">Home</a>
-        <a href="#portfolio" id="navPortfolio">Portfolio</a>
+        <a href="Charter.html" id="navPortfolio">Portfolio</a>
         <a href="skills.html">Skills</a>
         <a href="projects.html">Projects</a>
         <a id="hireLink" href="contact.html">Hire Me</a>
@@ -335,6 +335,12 @@
       <div class="rail">
         <button class="scroll-btn scroll-left" aria-label="Scroll left">‹</button>
         <div class="scroller" aria-label="Portfolio carousel">
+          <a href="Charter.html" class="card" style="text-decoration:none; cursor:pointer">
+            <img class="thumb" alt="Portfolio" loading="lazy" src="https://images.unsplash.com/photo-1507925921958-8a62f3d1a50d?w=1000&auto=format&fit=crop">
+            <div class="overlay">
+              <h3 class="title center">Portfolio</h3>
+            </div>
+          </a>
           <a href="gaurdcard.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Guard Card" loading="lazy" src="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?w=1000&auto=format&fit=crop">
             <div class="overlay">
@@ -403,10 +409,11 @@
         <a href="mailto:angel@example.com">Email</a>
         <a href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener">LinkedIn</a>
         <a href="https://github.com" target="_blank" rel="noopener">GitHub</a>
-        <a href="#portfolio">Portfolio</a>
-        <!-- Make Skills/Projects go to their tabs (pages), not home/hash -->
+        <a href="Charter.html">Portfolio</a>
         <a href="skills.html">Skills</a>
         <a href="projects.html">Projects</a>
+        <a href="experience.html">Experience</a>
+        <a href="certifications.html">Certifications</a>
         <a href="contact.html">Hire Me</a>
         <a href="#home" id="footerHome">Back to top</a>
       </nav>
@@ -485,7 +492,7 @@
       scroller.addEventListener('scroll', updateBtns, { passive: true });
       new ResizeObserver(updateBtns).observe(scroller);
       updateBtns();
-    }
+      }
     
     document.querySelectorAll('.rail').forEach(setupRail);
 
@@ -507,8 +514,7 @@
     }
     
     function hideMain(){
-      app
-      Root.classList.remove('show'); 
+      appRoot.classList.remove('show'); 
     }
 
     function kickIntro(){
