--- a/certifications.html
+++ b/certifications.html
@@ -497,6 +497,9 @@
                 <li><a href="#section2">Technical Skills & Competencies</a></li>
                 <li><a href="#section3">Career Development Path</a></li>
                 <li><a href="#section4">Ongoing Learning Objectives</a></li>
+                <li><a href="#section5">Gaurd Card &amp; CPR Training</a></li>
+                <li><a href="#section6">Academic Achievements</a></li>
+                <li><a href="#section7">Technical Certificates</a></li>
             </ol>
         </div>
 
@@ -583,6 +586,182 @@
 
                 <div class="image-container">
                     <img src="square.JPG" alt="Professional Development Roadmap">
+                </div>
+            </div>
+        </div>
+
+        <!-- NEW: 5. Gaurd Card & CPR Training -->
+        <div class="section" id="section5">
+            <div class="section-header">
+                <h2 class="section-title">5. Gaurd Card &amp; CPR Training</h2>
+            </div>
+            <div class="section-content">
+                <h4>Public Safety Credentials</h4>
+                <p>This section summarizes compliance and life-safety training relevant to workplace readiness and community safety. Details below can be expanded with certificate numbers and renewal dates as needed.</p>
+
+                <table class="stakeholder-table" aria-label="Guard Card and CPR credentials">
+                    <thead>
+                        <tr>
+                            <th>Credential</th>
+                            <th>Issuing Organization</th>
+                            <th>Status</th>
+                            <th>Issued / Expires</th>
+                            <th>Notes</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Guard Card (California BSIS)</td>
+                            <td>CA Bureau of Security &amp; Investigative Services</td>
+                            <td>Planned / In Progress</td>
+                            <td>—</td>
+                            <td>Add license number &amp; completion date when issued.</td>
+                        </tr>
+                        <tr>
+                            <td>CPR/AED (Adult &amp; Child)</td>
+                            <td>American Red Cross or AHA</td>
+                            <td>Planned / In Progress</td>
+                            <td>—</td>
+                            <td>Include provider, certification ID, and expiry (typically 2 years).</td>
+                        </tr>
+                        <tr>
+                            <td>Basic First Aid</td>
+                            <td>American Red Cross or Equivalent</td>
+                            <td>Planned / In Progress</td>
+                            <td>—</td>
+                            <td>Optional add-on to complement CPR/AED.</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <div class="instructions">
+                    <strong>Update Tips:</strong>
+                    After completion, replace “Planned / In Progress” with “Active,” add certificate/license numbers, and include issue/expiry dates for quick verification.
+                </div>
+            </div>
+        </div>
+
+        <!-- NEW: 6. Academic Achievements -->
+        <div class="section" id="section6">
+            <div class="section-header">
+                <h2 class="section-title">6. Academic Achievements</h2>
+            </div>
+            <div class="section-content">
+                <h4>Honors & Recognition</h4>
+                <table class="stakeholder-table" aria-label="Academic achievements">
+                    <thead>
+                        <tr>
+                            <th>Award / Honor</th>
+                            <th>Institution</th>
+                            <th>Term / Year</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Dean’s List</td>
+                            <td>California State University, Los Angeles</td>
+                            <td><!-- e.g., Spring 2025 --></td>
+                            <td><!-- e.g., GPA ≥ 3.5 for the term --></td>
+                        </tr>
+                        <tr>
+                            <td>Scholarship</td>
+                            <td><!-- e.g., CSULA College of Business & Economics --></td>
+                            <td><!-- Year --></td>
+                            <td><!-- Scholarship name and criteria --></td>
+                        </tr>
+                        <tr>
+                            <td>Department Recognition</td>
+                            <td><!-- Department / Program --></td>
+                            <td><!-- Year --></td>
+                            <td><!-- Brief note on project, leadership, or service --></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h4>Notable Coursework & Projects</h4>
+                <ul>
+                    <li><!-- Course or Project Name --> — <!-- One-line impact or outcome --></li>
+                    <li><!-- Course or Project Name --> — <!-- Technologies or methods used --></li>
+                    <li><!-- Course or Project Name --> — <!-- Measurable result or deliverable --></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- NEW: 7. Technical Certificates -->
+        <div class="section" id="section7">
+            <div class="section-header">
+                <h2 class="section-title">7. Technical Certificates</h2>
+            </div>
+            <div class="section-content">
+                <h4>Awarded</h4>
+                <table class="stakeholder-table" aria-label="Awarded technical certificates">
+                    <thead>
+                        <tr>
+                            <th>Certificate</th>
+                            <th>Issuer</th>
+                            <th>Status</th>
+                            <th>Issued</th>
+                            <th>Verification / Link</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>AI Fundamentals Certificate</td>
+                            <td><!-- e.g., [Issuing Organization] --></td>
+                            <td>Active</td>
+                            <td>November 2025</td>
+                            <td><a href="CertificateAi.PDF" target="_blank" rel="noopener">View PDF</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h4>In Progress / Planned</h4>
+                <table class="stakeholder-table" aria-label="Planned technical certificates">
+                    <thead>
+                        <tr>
+                            <th>Certificate</th>
+                            <th>Issuer</th>
+                            <th>Status</th>
+                            <th>Target Date</th>
+                            <th>Notes</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>CompTIA A+</td>
+                            <td>CompTIA</td>
+                            <td>Planned</td>
+                            <td><!-- e.g., Q1 2026 --></td>
+                            <td>Core 1 (220-1101) &amp; Core 2 (220-1102).</td>
+                        </tr>
+                        <tr>
+                            <td>AWS Certified Cloud Practitioner</td>
+                            <td>Amazon Web Services</td>
+                            <td>Planned</td>
+                            <td><!-- e.g., Q2 2026 --></td>
+                            <td>Cloud basics, billing, and architecture.</td>
+                        </tr>
+                        <tr>
+                            <td>Google IT Support Professional</td>
+                            <td>Google / Coursera</td>
+                            <td>Planned</td>
+                            <td><!-- e.g., 2026 --></td>
+                            <td>Help desk, networking, OS, troubleshooting.</td>
+                        </tr>
+                        <tr>
+                            <td>Microsoft Azure Fundamentals (AZ-900)</td>
+                            <td>Microsoft</td>
+                            <td>Planned</td>
+                            <td><!-- e.g., 2026 --></td>
+                            <td>Azure services, pricing, security, governance.</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <div class="instructions">
+                    <strong>Maintenance:</strong>
+                    Keep this section current by adding verification URLs or credential IDs, plus renewal cycles (if applicable) for each certificate.
                 </div>
             </div>
         </div>
