--- a/index.html
+++ b/index.html
@@ -335,12 +335,7 @@
       <div class="rail">
         <button class="scroll-btn scroll-left" aria-label="Scroll left">‹</button>
         <div class="scroller" aria-label="Portfolio carousel">
-          <a href="Charter.html" class="card" style="text-decoration:none; cursor:pointer">
-            <img class="thumb" alt="Portfolio" loading="lazy" src="https://images.unsplash.com/photo-1507925921958-8a62f3d1a50d?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title center">Portfolio</h3>
-            </div>
-          </a>
+          <!-- Removed the 'Portfolio' card as requested -->
           <a href="gaurdcard.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Guard Card" loading="lazy" src="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?w=1000&auto=format&fit=crop">
             <div class="overlay">
