--- a/certifications.html
+++ b/certifications.html
@@ -199,278 +199,7 @@
     </div>
   </section>
 
-  <!-- TOC -->
-  <section class="section">
-    <h2 class="nf">Certification Portfolio</h2>
-    <p class="lead">Jump to a section below to explore details.</p>
-    <div class="underline"></div>
-
-    <div class="grid" style="margin-top:14px">
-      <a class="tile" href="#section1" style="text-decoration:none;">
-        <div class="ic">01</div><div><h3>Professional Certifications</h3><p>Completed achievements and goals.</p></div>
-      </a>
-      <a class="tile" href="#section2" style="text-decoration:none;">
-        <div class="ic">02</div><div><h3>Technical Skills &amp; Competencies</h3><p>Core proficiencies and soft skills.</p></div>
-      </a>
-      <a class="tile" href="#section3" style="text-decoration:none;">
-        <div class="ic">03</div><div><h3>Career Development Path</h3><p>Short-, mid-, and long-term goals.</p></div>
-      </a>
-      <a class="tile" href="#section4" style="text-decoration:none;">
-        <div class="ic">04</div><div><h3>Ongoing Learning Objectives</h3><p>Current focus areas and strategy.</p></div>
-      </a>
-      <a class="tile" href="#section5" style="text-decoration:none;">
-        <div class="ic">05</div><div><h3>Gaurd Card &amp; CPR Training</h3><p>Public safety credentials.</p></div>
-      </a>
-      <a class="tile" href="#section6" style="text-decoration:none;">
-        <div class="ic">06</div><div><h3>Academic Achievements</h3><p>Honors, awards, and projects.</p></div>
-      </a>
-      <a class="tile" href="#section7" style="text-decoration:none;">
-        <div class="ic">07</div><div><h3>Technical Certificates</h3><p>Issued and planned technical certs.</p></div>
-      </a>
-    </div>
-  </section>
-
-  <!-- 1. Professional Certifications -->
-  <section class="section" id="section1">
-    <h2 class="nf">1. Professional Certifications</h2>
-    <div class="underline"></div>
-    <div class="grid" style="margin-top:14px">
-      <div class="tile">
-        <div class="ic">AI</div>
-        <div>
-          <h3>AI Fundamentals Certificate</h3>
-          <p>This recent achievement demonstrates understanding of AI principles and applications, including ML algorithms, data processing, and real-world implementation strategies.</p>
-          <a class="btn" href="CertificateAi.PDF" target="_blank" rel="noopener">View PDF</a>
-        </div>
-      </div>
-      <div class="tile">
-        <div class="ic">→</div>
-        <div>
-          <h3>Future Certification Goals</h3>
-          <p class="muted">Planned roadmap:</p>
-          <ul class="muted" style="margin-left:18px; line-height:1.5;">
-            <li>CompTIA A+ Certification</li>
-            <li>AWS Cloud Practitioner</li>
-            <li>Google IT Support Professional Certificate</li>
-            <li>Microsoft Azure Fundamentals</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- 2. Technical Skills & Competencies -->
-  <section class="section" id="section2">
-    <h2 class="nf">2. Technical Skills &amp; Competencies</h2>
-    <div class="underline"></div>
-    <div class="grid" style="margin-top:14px">
-      <div class="tile"><div class="ic">ML</div><div><h3>AI &amp; ML Concepts</h3><p>Foundations and practical approaches.</p></div></div>
-      <div class="tile"><div class="ic">Py</div><div><h3>Python / JS</h3><p>General scripting and frontend skills.</p></div></div>
-      <div class="tile"><div class="ic">WB</div><div><h3>Web Dev</h3><p>HTML, CSS, React fundamentals.</p></div></div>
-      <div class="tile"><div class="ic">DB</div><div><h3>Databases</h3><p>SQL basics and data management.</p></div></div>
-      <div class="tile"><div class="ic">PM</div><div><h3>Project Tools</h3><p>Microsoft Planner, task tracking.</p></div></div>
-      <div class="tile"><div class="ic">GH</div><div><h3>Version Control</h3><p>Git &amp; GitHub collaboration.</p></div></div>
-      <div class="tile"><div class="ic">CL</div><div><h3>Cloud</h3><p>Foundations across major providers.</p></div></div>
-      <div class="tile"><div class="ic">SO</div><div><h3>Soft Skills</h3><p>Communication, planning, and problem-solving.</p></div></div>
-    </div>
-  </section>
-
-  <!-- 3. Career Development Path -->
-  <section class="section" id="section3">
-    <h2 class="nf">3. Career Development Path</h2>
-    <div class="underline"></div>
-    <div class="grid" style="margin-top:14px">
-      <div class="tile"><div class="ic">S</div><div><h3>Short-Term (6–12 mo)</h3><p>Secure an entry-level IT role and obtain foundational certifications such as CompTIA A+.</p></div></div>
-      <div class="tile"><div class="ic">M</div><div><h3>Medium-Term (1–3 yrs)</h3><p>Advance into mid-level roles in system administration, networking, or cloud computing.</p></div></div>
-      <div class="tile"><div class="ic">L</div><div><h3>Long-Term (3–5 yrs)</h3><p>Specialize in AI implementation or cloud infrastructure; contribute to innovative projects and leadership.</p></div></div>
-    </div>
-  </section>
-
-  <!-- 4. Ongoing Learning Objectives -->
-  <section class="section" id="section4">
-    <h2 class="nf">4. Ongoing Learning Objectives</h2>
-    <div class="underline"></div>
-    <div class="grid" style="margin-top:14px">
-      <div class="tile"><div class="ic">AI</div><div><h3>Advanced AI/ML</h3><p>Modeling, deployment, and ethics.</p></div></div>
-      <div class="tile"><div class="ic">CL</div><div><h3>Cloud Platforms</h3><p>AWS, Azure, Google Cloud skills.</p></div></div>
-      <div class="tile"><div class="ic">SEC</div><div><h3>Cybersecurity</h3><p>Best practices and fundamentals.</p></div></div>
-      <div class="tile"><div class="ic">DO</div><div><h3>DevOps</h3><p>Automation and CI/CD tooling.</p></div></div>
-      <div class="tile"><div class="ic">DB</div><div><h3>Databases</h3><p>Optimization and administration.</p></div></div>
-    </div>
-    <div class="note" style="max-width:1200px; margin:14px auto 0;">
-      Keep a lightweight study log and attach artifacts (labs, repos, notes) to each objective for quick portfolio linking.
-    </div>
-  </section>
-
-  <!-- 5. Gaurd Card & CPR Training -->
-  <section class="section" id="section5">
-    <h2 class="nf">5. Gaurd Card &amp; CPR Training</h2>
-    <p class="lead">Public safety credentials supporting workplace readiness and community safety.</p>
-    <div class="underline"></div>
-
-    <div class="table-wrap" style="margin-top:14px">
-      <table aria-label="Guard Card and CPR credentials">
-        <thead>
-          <tr>
-            <th>Credential</th>
-            <th>Issuing Organization</th>
-            <th>Status</th>
-            <th>Issued / Expires</th>
-            <th>Notes</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Guard Card (California BSIS)</td>
-            <td>CA Bureau of Security &amp; Investigative Services</td>
-            <td><span class="status planned">Planned / In Progress</span></td>
-            <td>—</td>
-            <td>Add license number &amp; completion date when issued.</td>
-          </tr>
-          <tr>
-            <td>CPR/AED (Adult &amp; Child)</td>
-            <td>American Red Cross or AHA</td>
-            <td><span class="status planned">Planned / In Progress</span></td>
-            <td>—</td>
-            <td>Include provider, certification ID, and expiry (typically 2 years).</td>
-          </tr>
-          <tr>
-            <td>Basic First Aid</td>
-            <td>American Red Cross or Equivalent</td>
-            <td><span class="status planned">Planned / In Progress</span></td>
-            <td>—</td>
-            <td>Optional add-on to complement CPR/AED.</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="note">
-      <strong>Update Tips:</strong> After completion, replace status with <span class="status active">Active</span>, add certificate/license numbers, and include issue/expiry dates for verification.
-    </div>
-  </section>
-
-  <!-- 6. Academic Achievements -->
-  <section class="section" id="section6">
-    <h2 class="nf">6. Academic Achievements</h2>
-    <div class="underline"></div>
-
-    <div class="table-wrap" style="margin-top:14px">
-      <table aria-label="Academic achievements">
-        <thead>
-          <tr>
-            <th>Award / Honor</th>
-            <th>Institution</th>
-            <th>Term / Year</th>
-            <th>Description</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Dean’s List</td>
-            <td>California State University, Los Angeles</td>
-            <td><!-- e.g., Spring 2025 --></td>
-            <td><!-- e.g., GPA ≥ 3.5 for the term --></td>
-          </tr>
-          <tr>
-            <td>Scholarship</td>
-            <td><!-- e.g., CSULA College of Business & Economics --></td>
-            <td><!-- Year --></td>
-            <td><!-- Scholarship name and criteria --></td>
-          </tr>
-          <tr>
-            <td>Department Recognition</td>
-            <td><!-- Department / Program --></td>
-            <td><!-- Year --></td>
-            <td><!-- Brief note on project, leadership, or service --></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="note">
-      Add notable coursework/projects under each award for context (links to repos, reports, or presentations work great).
-    </div>
-  </section>
-
-  <!-- 7. Technical Certificates -->
-  <section class="section" id="section7">
-    <h2 class="nf">7. Technical Certificates</h2>
-    <div class="underline"></div>
-
-    <h3 style="text-align:center; margin:10px 0 12px;">Awarded</h3>
-    <div class="table-wrap" style="margin-top:8px">
-      <table aria-label="Awarded technical certificates">
-        <thead>
-          <tr>
-            <th>Certificate</th>
-            <th>Issuer</th>
-            <th>Status</th>
-            <th>Issued</th>
-            <th>Verification / Link</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>AI Fundamentals Certificate</td>
-            <td><!-- e.g., Issuing Organization --></td>
-            <td><span class="status active">Active</span></td>
-            <td>November 2025</td>
-            <td><a href="CertificateAi.PDF" target="_blank" rel="noopener" style="color:#fff;">View PDF</a></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <h3 style="text-align:center; margin:18px 0 12px;">In Progress / Planned</h3>
-    <div class="table-wrap">
-      <table aria-label="Planned technical certificates">
-        <thead>
-          <tr>
-            <th>Certificate</th>
-            <th>Issuer</th>
-            <th>Status</th>
-            <th>Target Date</th>
-            <th>Notes</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>CompTIA A+</td>
-            <td>CompTIA</td>
-            <td><span class="status planned">Planned</span></td>
-            <td><!-- e.g., Q1 2026 --></td>
-            <td>Core 1 (220-1101) &amp; Core 2 (220-1102).</td>
-          </tr>
-          <tr>
-            <td>AWS Certified Cloud Practitioner</td>
-            <td>Amazon Web Services</td>
-            <td><span class="status planned">Planned</span></td>
-            <td><!-- e.g., Q2 2026 --></td>
-            <td>Cloud basics, billing, and architecture.</td>
-          </tr>
-          <tr>
-            <td>Google IT Support Professional</td>
-            <td>Google / Coursera</td>
-            <td><span class="status planned">Planned</span></td>
-            <td><!-- e.g., 2026 --></td>
-            <td>Help desk, networking, OS, troubleshooting.</td>
-          </tr>
-          <tr>
-            <td>Microsoft Azure Fundamentals (AZ-900)</td>
-            <td>Microsoft</td>
-            <td><span class="status planned">Planned</span></td>
-            <td><!-- e.g., 2026 --></td>
-            <td>Azure services, pricing, security, governance.</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="note">
-      <strong>Maintenance:</strong> Add verification URLs or credential IDs and note renewal cycles (if applicable).
-    </div>
-  </section>
+  <!-- (Sections 1–7 removed as requested) -->
 
   <footer class="footer">
     <nav class="links">
